Styling and Display settings corrected.  No Longer wonky on smaller screen sizes.

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
     text-align: center;
     margin: 0;
     background-color: #EAF6f6;
+    display: inline-block;
 }
 
 h1 {
